samples/_failures_safe/1761392132_d383ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f6d147b.c: In function ‘load_log_file’:
./samples/SAFE/__tmp_6f6d147b.c:135:13: error: ‘update’ undeclared (first use in this function)
  135 |             update
      |             ^~~~~~
./samples/SAFE/__tmp_6f6d147b.c:135:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6f6d147b.c:135:19: error: expected ‘;’ at end of input
  135 |             update
      |                   ^
      |                   ;
./samples/SAFE/__tmp_6f6d147b.c:135:13: error: expected declaration or statement at end of input
  135 |             update
      |             ^~~~~~
./samples/SAFE/__tmp_6f6d147b.c:135:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6f6d147b.c:135:13: error: expected declaration or statement at end of input
